--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ description: Cayman is a clean, responsive theme for GitHub Pages.
 show_downloads: true
 google_analytics:
 remote_theme: pietromenna/jekyll-cayman-theme
+theme: jekyll-theme-cayman
