--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
+title: Van Riper
+description: Serial Community Organizer
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
