--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Van Riper
 description: Serial Community Organizer
 show_downloads: false
-incremental: false
+include: ["goconmap.html", "goconmap.kml"]
 google_analytics:
 theme: jekyll-theme-cayman
